# marmaro

./: .gitignore  Cargo.toml  README.md  package.sh
.github/workflows/: release.yml
Marmaro.app/Contents/: Info.plist
docs/: index.html
src/: app.rs  bedrock.rs  db.rs  keychain.rs  main.rs  math_render.rs  md_render.rs  message.rs
